--- a/package.json
+++ b/package.json
@@ -10,12 +10,26 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
+    "next-auth": "^4.23.1",
+    "pg": "^8.11.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "sweetalert2": "^11.7.28",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22"
   }
 }
